                              HISTORY

    This is a non exhaustive list of changes in the PyEdPro project. Git has a more complete
list of logs.

    Sun 05.Sep.2021 -- made it function on the Mac M1 laptop
    Pyedpro now is working good on the Mac. I installed homebrew, and got it to work. It
    was not a trivial exercise, as the Mac pygobject did not do half of the stuff as the
    Linux version did. No asynchronous  anything, segmentation faults everywhere. (which python
    is not suppose to have) So added new async subsystem with threads, and cleaned out
    a lot of parts. The font rendering was messed up, but got fixed by replacing pango's
    get_pixel_size() with get_size() / PANGO_UNIT. [Suspect int vs float accuracy issues]
    Some asyn functions like the function updater is disabled, but it can be done
    manually. (right click on doc -> rescan)
    NOT RECOMMENDED

    Thu Tue 08.Sep.2020   (version 1.4)
    F2 key starts devhelp, and puts you into a search with the
    current selection. For instance if Gtk.DrawingArea is selected,
    the help page of that class comes up. Devhelp must be installed.

    Tue xx.Sep.2020
    Lot of changes; submitted under auto submit;
    Last: Reallocated some keys ... F3 is now find next and shift F3
    is find previous (as most programs do)

    Thu Jan 09 2020   (version 1.0)
    setup.py and company

    Wed Jan 08 2020   (version 1.0)
    pango dirs and cleanup

    Wed Dec 25   (version 0.95)
    Spell check - loading 8 bit clean; Capitalize resoration

    Wed Dec 24
    Harmonized py 2 and py 3 differences - unicode mess cleaned up

    xx Nov 2019
    Switched to Ubuntu as main platform

    Mon Sep 2 2019
    Reload yes/no dialog, old buffer saved in backup dir

    Sun Sep 1 2019
    fixed cdir on load

    Mon Aug 12 2019
    added terminal right click shortcut

  may-08-2019   (0.71)

    Tested OK on running it in a windows DOS box.

    o Some path inconsistencies (corrected with os.sep)