@@ -3,6 +3,18 @@
     This is a non exhaustive list of changes in the PyEdPro project. Git has a more complete
 list of logs.
 
+    jul/19/2018       Coloring for spell check, Trigger by scroll, more dominant color
+    Jul/xx/2018       Update README, KEYS.TXT
+    Jun/xx/2018       Log Files for time accounting.
+    Jun/08/2020       Menu control / Headerbar / Version update
+    Mon 28.Sep.2020   Reshuffled imports pylint
+    Fri 25.Dec.2020   Added web view, m4 filter md2html filterRelese ready
+    Fri 07.May.2021   Many fixed, installs, new features
+    Sun 05.Sep.2021   ported to Mac M1 ... what a pain .. half the things did not work
+    Tue 06.Sep.2022   Installation, anchor for search ...
+    Thu 27.Oct.2022   Restored menu keymaps for the system to handle it.
+    Sun 05.May.2024   Import webView dummySun
+
     Sun 05.Sep.2021 -- made it function on the Mac M1 laptop
     Pyedpro now is working good on the Mac. I installed homebrew, and got it to work. It
     was not a trivial exercise, as the Mac pygobject did not do half of the stuff as the
